--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -83,7 +83,8 @@ h3 {
   font-size: 1.35rem;
 }
 
-.education-info {
+.education-info,
+.work-info {
   padding: 0.5rem;
 }
 
@@ -97,4 +98,5 @@ h3 {
   display: flex;
   justify-content: center;
   gap: 0.5rem;
+  margin-top: 0.5rem;
 }
