--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,8 @@ body {
   height: 100vh;
   display: grid;
   place-items: center;
+  padding: 1rem;
+  background-color: lightgray;
 }
 
 .main {
@@ -34,6 +36,8 @@ body {
   min-width: 800px;
   display: flex;
   flex-direction: column;
+  min-height: 800px;
+  background-color: white;
 }
 
 .add-btn {
